--- a/03-lection1/01-button/index.html
+++ b/03-lection1/01-button/index.html
@@ -3,9 +3,15 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
+        <link rel="stylesheet" href="./normalize.css">
         <link rel="stylesheet" href="./button.css">
     </head>
     <body>
-
+        <button class="button_primary">Primary</button>
+        <button class="button_primary">Primary disaibled</button>
+        <button class="button_secondary">Secondary</button>
+        <button class="button_secondary">Secondary disaibled</button>
+        <button class="button_alternate">Alternate</button>
+        <button class="button_alternate">Alternate disaibled</button>
     </body>
 </html>
