03-lection-02-accordion done:fix

--- a/03-lection1/02-accordion/index.html
+++ b/03-lection1/02-accordion/index.html
@@ -10,7 +10,7 @@
             <summary class = "accordion__summary">
                 Accordion item 1
             </summary>
-            <p>
+            <p class="accordion__content">
                 Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
             </p>
         </details>
@@ -18,7 +18,7 @@
             <summary class = "accordion__summary">
                 Accordion item 2
             </summary>
-            <p>
+            <p class="accordion__content">
                 Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
             </p>
         </details>
